<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/freelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

<LinearLayout
    android:id="@+id/kubeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_weight="3"
>
</LinearLayout>
<LinearLayout
    android:id="@+id/ctrlLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
<ImageButton
    android:id="@+id/rz"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_marginRight="@dimen/buttonPadding"
    android:background="@color/green"
    android:layout_weight="1" />

<ImageButton
    android:id="@+id/ry"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_marginRight="@dimen/buttonPadding"
    android:background="@color/blue"
    android:layout_weight="1" />

<ImageButton
    android:id="@+id/rx"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_marginRight="@dimen/buttonPadding"
    android:background="@color/red"
    android:layout_weight="1" />

<ImageButton
    android:id="@+id/crx"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
     android:layout_marginRight="@dimen/buttonPadding"
    android:background="@color/cyan"
    android:layout_weight="1" />

<ImageButton
    android:id="@+id/cry"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
     android:layout_marginRight="@dimen/buttonPadding"
    android:background="@color/purple"
    android:layout_weight="1" />

<ImageButton
    android:id="@+id/crz"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
     android:layout_marginRight="@dimen/buttonPadding"
    android:background="@color/yellow"
    android:layout_weight="1" />

<ImageButton
    android:id="@+id/cubereset"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_marginLeft="@dimen/buttonPadding"
    android:contentDescription="@string/resetTitle"
    android:src="@drawable/reset_plus"
    android:background="#FFF"
    android:layout_weight="1" />
</LinearLayout>
  <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >
		
       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
		    <TextView
			    android:id="@+id/statusbar"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			   	android:textSize="30sp"
			    android:gravity="center"
			    android:text="@string/normal"
			    android:textColor="@color/red"
			    android:textStyle="bold|italic"
			    android:typeface="sans" 
			    android:layout_weight="1" >
   				 <requestFocus />
			</TextView>
			<SeekBar
			    android:id="@+id/cubescale"
			    android:layout_width="@dimen/seeklength"
			    android:layout_height="wrap_content"
			    android:layout_weight="1" />
            <TextView
            android:id="@+id/view_rotate_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/viewrtitle"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/viewx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/viewrx"
            android:layout_weight="1" />

        <SeekBar
            android:id="@+id/viewrx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="360"
            android:progress="180"
            android:layout_weight="1" />

            <TextView
            android:id="@+id/viewy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/viewry"
            android:layout_weight="1" />

            <SeekBar
            android:id="@+id/viewry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="360"
            android:progress="180"
            android:layout_weight="1" />
    
        
            <TextView
            android:id="@+id/viewz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/viewrz"
            android:layout_weight="1" />


            <SeekBar
            android:id="@+id/viewrz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="360"
            android:progress="180"
            android:layout_weight="1" /> 
</LinearLayout>
</ScrollView>
</LinearLayout>

<!-- 
        <SeekBar
            android:id="@+id/vecx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="5"
            android:layout_weight="1" />

            <SeekBar
            android:id="@+id/vecy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="5"
            android:layout_weight="1" /> 

            <SeekBar
            android:id="@+id/vecz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="5"
            android:layout_weight="1" />
 --> 